Closed
Bug 1080361
Opened 8 years ago
Closed 8 years ago
DOMException InvalidStateError when setPointerCapture was invoke on element from alien document tree
Categories
(Core :: DOM: Events, defect)
Core
DOM: Events
Tracking
()
RESOLVED
FIXED
mozilla36
People
(Reporter: alessarik, Assigned: alessarik)
References
Details
Attachments
(2 files, 1 obsolete file)
1.01 KB,
patch
|
smaug
:
review+
mbrubeck
:
feedback+
|
Details | Diff | Splinter Review |
6.63 KB,
patch
|
smaug
:
review+
mbrubeck
:
feedback+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 Build ID: 20140825202822 Steps to reproduce: Test assertion 13.4 Expected results: If the Element on which this method is invoked does not participate in its ownerDocument's tree, throw an exception with the name InvalidStateError.
Assignee | ||
Comment 1•8 years ago
|
||
Add check for correct detecting element in DOM tree in setPointerCapture function
Attachment #8502459 -
Flags: review?(bugs)
Attachment #8502459 -
Flags: feedback?(mbrubeck)
Assignee | ||
Updated•8 years ago
|
Updated•8 years ago
|
Attachment #8502459 -
Flags: feedback?(mbrubeck) → feedback+
Comment 2•8 years ago
|
||
Comment on attachment 8502459 [details] [diff] [review] invalid_state_error_ver1.diff A test would be nice (and since this is a tiny change, you could just add the test to some existing test file).
Attachment #8502459 -
Flags: review?(bugs) → review+
Assignee | ||
Comment 3•8 years ago
|
||
+ Test. Several tests for check several exception in setPointerCapture function
Attachment #8504664 -
Flags: review?(bugs)
Attachment #8504664 -
Flags: feedback?(mbrubeck)
Assignee | ||
Comment 4•8 years ago
|
||
Test without patch: https://tbpl.mozilla.org/?tree=Try&rev=a92dfb2a4c58 Test with patch: https://tbpl.mozilla.org/?tree=Try&rev=c5d23d65b4d0
Updated•8 years ago
|
Attachment #8504664 -
Flags: review?(bugs) → review+
Assignee | ||
Comment 5•8 years ago
|
||
+ Changes: Repair wrong variable name
Attachment #8504664 -
Attachment is obsolete: true
Attachment #8504664 -
Flags: feedback?(mbrubeck)
Attachment #8504768 -
Flags: review?(bugs)
Attachment #8504768 -
Flags: feedback?(mbrubeck)
Assignee | ||
Comment 6•8 years ago
|
||
Test without patch: https://tbpl.mozilla.org/?tree=Try&rev=fd769912ee5a Tests with patch: https://tbpl.mozilla.org/?tree=Try&rev=e654a4c3681d
Updated•8 years ago
|
Attachment #8504768 -
Flags: review?(bugs) → review+
Updated•8 years ago
|
Attachment #8504768 -
Flags: feedback?(mbrubeck) → feedback+
Assignee | ||
Comment 7•8 years ago
|
||
If nobody have objections, I put checkin flag.
Keywords: checkin-needed
Comment 8•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/a542486a0852 https://hg.mozilla.org/integration/mozilla-inbound/rev/4401c5453e50
Assignee: nobody → alessarik
Keywords: checkin-needed
Comment 9•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/a542486a0852 https://hg.mozilla.org/mozilla-central/rev/4401c5453e50
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in
before you can comment on or make changes to this bug.
Description
•