Bug 1080361 - Add check in setPointerCapture function. r=smaug